# MST-Program-Example

./: .gitignore  CMakeLists.txt
resources/: testGraph.txt
src/: CMakeLists.txt  ParseGraphFile.cpp  ParseGraphFile.h  main.cpp  mmio.h
tests/: CMakeLists.txt
